--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,6 +50,7 @@
     "space-infix-ops": "error",
     "space-unary-ops": "error",
     "spaced-comment": "error",
-    "yoda": "error"
+    "yoda": "error",
+    "@typescript-eslint/ban-ts-comment": "off"
   }
 }
