feat(Logs): Basic logs

--- a/config.example.json
+++ b/config.example.json
@@ -7,5 +7,6 @@
 			"autoPublish": true
 		}
 	],
-	"suggestions": "SUGGESTIONS CHANNEL ID"
+	"suggestions": "SUGGESTIONS CHANNEL ID",
+	"logs": "LOGS CHANNEL ID"
 }
