feat(Moderation): Add kick and ban context menu with auto send to cases channel

--- a/config.example.json
+++ b/config.example.json
@@ -8,5 +8,6 @@
 		}
 	],
 	"suggestions": "SUGGESTIONS CHANNEL ID",
-	"logs": "LOGS CHANNEL ID"
+	"logs": "LOGS CHANNEL ID",
+	"moderation_alerts": "MODERATION ALERTS CHANNEL ID"
 }
