--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ryneczek",
   "version": "1.0.0",
   "main": "dist",
-  "author": "MinerPL <contact@minerpl.xyz>",
+  "author": "Dawid Jaworski <contact@minerpl.xyz>",
   "license": "MIT",
   "scripts": {
     "dev": "npm run build && npm start",
