--- a/package.json
+++ b/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "ryneczek",
-  "version": "1.0.0",
-  "main": "dist",
-  "author": "Dawid Jaworski <contact@minerpl.xyz>",
-  "license": "MIT",
-  "scripts": {
-    "dev": "npm run build && npm start",
-    "build": "rm -rf dist/ && tsc && resolve-tspaths",
-    "start": "node --enable-source-maps ."
-  },
-  "dependencies": {
-    "discord-api-types": "^0.37.120",
-    "discord.js": "^14.18.0",
-    "node-cron": "^3.0.3",
-    "undici": "^7.8.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0",
-    "eslint": "^8.49.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "resolve-tspaths": "^0.8.23",
-    "typescript": "^5.8.3"
-  }
+	"name": "ryneczek",
+	"version": "1.0.0",
+	"main": "dist",
+	"author": "Dawid Jaworski <contact@minerpl.xyz>",
+	"license": "MIT",
+	"scripts": {
+		"dev": "npm run build && npm start",
+		"build": "rm -rf dist/ && tsc && resolve-tspaths",
+		"start": "node --enable-source-maps ."
+	},
+	"dependencies": {
+		"discord-api-types": "^0.37.120",
+		"discord.js": "^14.18.0",
+		"node-cron": "^3.0.3",
+		"undici": "^7.8.0"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "1.9.4",
+		"resolve-tspaths": "^0.8.23",
+		"typescript": "^5.8.3"
+	}
 }
