--- a/package.json
+++ b/package.json
@@ -6,18 +6,24 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "npm run build && npm start",
-		"build": "rm -rf dist/ && tsc && resolve-tspaths",
+		"build": "rm -rf dist/ && tsc",
 		"start": "node --enable-source-maps ."
+	},
+	"imports": {
+		"#classes/*": "./dist/classes/*.js",
+		"#handlers/*": "./dist/classes/Handlers/*.js",
+		"#functions/*": "./dist/functions/*.js",
+		"#utils/*": "./dist/utils/*.js",
+		"#client": "./dist/classes/Ryneczek.js",
+		"#config": "./config.json"
 	},
 	"dependencies": {
 		"discord-api-types": "^0.37.120",
 		"discord.js": "^14.18.0",
-		"node-cron": "^3.0.3",
 		"undici": "^7.8.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
-		"resolve-tspaths": "^0.8.23",
 		"typescript": "^5.8.3"
 	}
 }
