--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           echo "short_sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
           BRANCH_NAME=$(echo "${GITHUB_REF#refs/heads/}")
-          if [ "$BRANCH_NAME" = "main" ]; then
+          if [ "$BRANCH_NAME" = "master" ]; then
             echo "branch=latest" >> $GITHUB_OUTPUT
           else
             echo "branch=$BRANCH_NAME" >> $GITHUB_OUTPUT
