--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "ryneczek",
 	"version": "1.0.0",
 	"main": "dist",
+	"type": "module",
 	"author": "Dawid Jaworski <contact@minerpl.xyz>",
 	"license": "MIT",
 	"scripts": {
@@ -15,15 +16,18 @@
 		"#functions/*": "./dist/functions/*.js",
 		"#utils/*": "./dist/utils/*.js",
 		"#client": "./dist/classes/Ryneczek.js",
-		"#config": "./config.json"
+		"#prisma": "./prisma/generated/prisma/client.js",
+		"#types/*": "./dist/types/*.js"
 	},
 	"dependencies": {
+		"@prisma/client": "^6.7.0",
 		"discord-api-types": "^0.38.2",
 		"discord.js": "^14.19.2",
 		"undici": "^7.8.0"
 	},
 	"devDependencies": {
 		"@biomejs/biome": "1.9.4",
+		"prisma": "^6.7.0",
 		"typescript": "^5.8.3"
 	}
 }
