--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,23 +1,29 @@
 {
 	"compilerOptions": {
-		"target": "es2021",
-		"module": "commonjs",
+		"target": "esnext",
+		"module": "nodenext",
 		"allowJs": true,
 		"outDir": "dist",
-		"moduleResolution": "node",
+		"moduleResolution": "nodenext",
+		"sourceRoot": "src",
 		"baseUrl": "src",
+		"rootDir": "src",
 		"sourceMap": true,
+		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
+		"skipLibCheck": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
 		"paths": {
 			"#classes/*": ["classes/*"],
 			"#handlers/*": ["classes/Handlers/*"],
 			"#functions/*": ["functions/*"],
 			"#utils/*": ["utils/*"],
 			"#client": ["classes/Ryneczek.ts"],
-			"#config": ["../config.json"]
-		},
-		"allowSyntheticDefaultImports": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true
-	}
+			"#types/":  ["types/*"],
+			"#prisma": ["../prisma/generated/prisma/client"]
+		}
+	},
+	"include": ["src/**/*"],
+	"exclude": ["prisma/generated", "config.json"]
 }
