--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.7.0",
-		"discord-api-types": "^0.38.2",
-		"discord.js": "^14.19.2",
+		"discord-api-types": "^0.38.8",
+		"discord-html-transcripts": "^3.2.0",
+		"discord.js": "^14.19.3",
 		"undici": "^7.8.0"
 	},
 	"devDependencies": {
