--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
 	"scripts": {
 		"dev": "npm run build && npm start",
 		"build": "rm -rf dist/ && tsc",
-		"start": "node --enable-source-maps ."
+		"start": "npm run migrate:deploy && node --enable-source-maps .",
+		"migrate:reset": "prisma migrate reset",
+		"migrate:create": "prisma migrate dev --create-only",
+		"migrate:dev": "prisma migrate dev",
+		"migrate:deploy": "prisma migrate deploy",
+		"prisma:generate": "prisma generate"
 	},
 	"imports": {
 		"#classes/*": "./dist/classes/*.js",
