feat: Add sentry

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.8.2",
+		"@sentry/node": "^9.24.0",
 		"discord-api-types": "^0.38.8",
 		"discord-html-transcripts": "^3.2.0",
 		"discord.js": "^14.19.3",
