--- a/package.json
+++ b/package.json
@@ -25,16 +25,16 @@
 		"#types/*": "./dist/types/*.js"
 	},
 	"dependencies": {
-		"@prisma/client": "^6.8.2",
-		"@sentry/node": "^9.24.0",
-		"discord-api-types": "^0.38.8",
-		"discord-html-transcripts": "^3.2.0",
-		"discord.js": "^14.21.0",
+		"@prisma/client": "^6.16.2",
+		"@sentry/node": "^10.15.0",
+		"discord-api-types": "^0.38.26",
+		"discord-html-transcripts": "^3.3.0",
+		"discord.js": "^14.22.1",
 		"undici": "^7.10.0"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "1.9.4",
-		"prisma": "^6.8.2",
-		"typescript": "^5.8.3"
+		"@biomejs/biome": "^2.2.4",
+		"prisma": "^6.16.2",
+		"typescript": "^5.9.2"
 	}
 }
